# lua-unitylike-script-engine

./: .gitmodules  CMakeLists.txt  README.md  Session.vim  run
include/: object.h  object_l.h
scripts/: script_1.lua
scripts/base/: basescript.lua
src/: main.c  object.c  object_l.c
